# openjudge

./: README.md  pyproject.toml
data/problem 1/: solution.py
data/problem 1/testcase/: test001.in  test001.out  test002.in  test002.out  test003.in  test003.out  test004.in  test004.out  test005.in  test005.out  test006.in  test006.out  test007.in  test007.out  test008.in  test008.out  test009.in  test009.out  test010.in  test010.out  test011.in  test011.out  test012.in  test012.out  test013.in  test013.out  test014.in  test014.out  test015.in  test015.out  test016.in  test016.out  test017.in  test017.out  test018.in  test018.out  test019.in  test020.in  test020.out  test021.in  (+59 more)
data/problem 2/: checker.py  solution.py
data/problem 2/testcase/: test001.out  test002.out
openjudge/: code_judge.py  problem_builder.py  tc_generator.py
src/openjudge/: __init__.py  code_judge.py  code_judge_debug.py  problem_builder.py  tc_generator.py
tests/: test.py
