[project]
name = "openjudge"
version = "0.1.0"
description = "Local code judge & test case generator"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "Airhood", email = "shinesky0530@gmail.com"}]

[project.urls]
"Homepage" = "https://github.com/airhood/openjudge"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
